load("@io_bazel_rules_kotlin//kotlin:jvm.bzl", "kt_jvm_library")

kt_jvm_library(
    name = "http",
    srcs = glob(["*.kt"]),
    deps = [
        "//third_party:undertow",
    ],
)

# java_binary allows optional target _deploy.jar
java_binary(
    name = "HttpServer",
    main_class = "me.kfeng.http.Main",
    runtime_deps = [":http"],
)
